<?xml version="1.0"?>
<package format="2">
  <name>mqtt_bridge_package</name>
  <version>0.0.0</version>
  <description>The mqtt_bridge_package for ROS and MQTT communication.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
